@@ -1,5 +1,12 @@
 2007-02-05  William Jon McCann  <mccann@jhu.edu>
 
+	* gsd-media-keys-window.c: (render_eject), (draw_eject),
+	(draw_waves), (draw_speaker), (render_speaker),
+	(draw_volume_boxes), (on_expose_event):
+	Use #define for the alpha levels.
+
+2007-02-05  William Jon McCann  <mccann@jhu.edu>
+
 	* Makefile.am:
 	* gsd-media-keys-window.c: (load_pixbuf), (render_eject),
 	(draw_eject), (draw_action_eject), (draw_waves), (draw_speaker),
